[gd_scene load_steps=19 format=3 uid="uid://cucmpbdech2et"]

[ext_resource type="Texture2D" uid="uid://cy372t1ecbgjy" path="res://sprites/2 Background/Night/1.png" id="1_ddf5f"]
[ext_resource type="Script" path="res://scripts/Menu.gd" id="1_mcq1c"]
[ext_resource type="Texture2D" uid="uid://nh7a150d4xiu" path="res://sprites/2 Background/Night/2.png" id="2_omr7b"]
[ext_resource type="Texture2D" uid="uid://dkfwfo3ruehj" path="res://sprites/2 Background/Night/3.png" id="3_74i6x"]
[ext_resource type="Texture2D" uid="uid://cupdftr5va5pe" path="res://sprites/gui/6 Buttons/1/1_04.png" id="3_man8u"]
[ext_resource type="Texture2D" uid="uid://b1tvkuma7lyti" path="res://sprites/2 Background/Night/4.png" id="4_uc4tg"]
[ext_resource type="Texture2D" uid="uid://ps773wj7e3u1" path="res://sprites/gui/6 Buttons/1/1_08.png" id="4_vn47h"]
[ext_resource type="Texture2D" uid="uid://cxhqss6vivetq" path="res://sprites/2 Background/Night/5.png" id="5_1q7nh"]
[ext_resource type="FontFile" uid="uid://ck1trnbjuouv1" path="res://sprites/gui/10 Font/CyberpunkCraftpixPixel.otf" id="6_hih5o"]
[ext_resource type="Texture2D" uid="uid://b04ot8a6swkd6" path="res://sprites/gui/5 Logo/Logo1.png" id="6_vkppv"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_l1d71"]
texture = ExtResource("3_man8u")
texture_margin_left = 4.0
texture_margin_top = 4.0
texture_margin_right = 4.0
texture_margin_bottom = 4.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lobxv"]
texture = ExtResource("4_vn47h")
texture_margin_left = 4.0
texture_margin_top = 4.0
texture_margin_right = 4.0
texture_margin_bottom = 4.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_834ku"]
texture = ExtResource("3_man8u")
texture_margin_left = 6.0
texture_margin_top = 4.0
texture_margin_right = 6.0
texture_margin_bottom = 4.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_58cx2"]
texture = ExtResource("4_vn47h")
texture_margin_left = 6.0
texture_margin_top = 4.0
texture_margin_right = 6.0
texture_margin_bottom = 4.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qfntj"]
texture = ExtResource("3_man8u")
texture_margin_left = 4.0
texture_margin_top = 4.0
texture_margin_right = 4.0
texture_margin_bottom = 4.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4yhxx"]
texture = ExtResource("4_vn47h")
texture_margin_left = 4.0
texture_margin_top = 4.0
texture_margin_right = 4.0
texture_margin_bottom = 4.0

[sub_resource type="LabelSettings" id="LabelSettings_jjaxa"]
font = ExtResource("6_hih5o")
font_size = 28
font_color = Color(0.996078, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_y8hwx"]
font = ExtResource("6_hih5o")
font_color = Color(1, 0, 0, 1)

[node name="Node2D" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.56, 0.56)

[node name="Menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -37.0
offset_top = 53.0
offset_right = 37.0
offset_bottom = 86.0
grow_horizontal = 2
script = ExtResource("1_mcq1c")

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.44
anchor_top = 0.284
anchor_right = 0.44
anchor_bottom = 0.284
offset_left = -38.06
offset_top = -35.872
offset_right = 46.94
offset_bottom = 50.128
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Start" type="Button" parent="Menu/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_hih5o")
theme_override_styles/normal = SubResource("StyleBoxTexture_l1d71")
theme_override_styles/hover = SubResource("StyleBoxTexture_l1d71")
theme_override_styles/pressed = SubResource("StyleBoxTexture_lobxv")
text = "Start"

[node name="Options" type="Button" parent="Menu/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_hih5o")
theme_override_styles/normal = SubResource("StyleBoxTexture_834ku")
theme_override_styles/hover = SubResource("StyleBoxTexture_834ku")
theme_override_styles/pressed = SubResource("StyleBoxTexture_58cx2")
text = "Options"

[node name="Exit" type="Button" parent="Menu/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_hih5o")
theme_override_styles/normal = SubResource("StyleBoxTexture_qfntj")
theme_override_styles/hover = SubResource("StyleBoxTexture_qfntj")
theme_override_styles/pressed = SubResource("StyleBoxTexture_4yhxx")
text = "Exit"

[node name="Node2D" type="Node2D" parent="."]
z_index = -1

[node name="1" type="Sprite2D" parent="Node2D"]
texture = ExtResource("1_ddf5f")

[node name="2" type="Sprite2D" parent="Node2D"]
texture = ExtResource("2_omr7b")

[node name="3" type="Sprite2D" parent="Node2D"]
texture = ExtResource("3_74i6x")

[node name="4" type="Sprite2D" parent="Node2D"]
texture = ExtResource("4_uc4tg")

[node name="5" type="Sprite2D" parent="Node2D"]
texture = ExtResource("5_1q7nh")

[node name="Logo1" type="Sprite2D" parent="Node2D"]
position = Vector2(0, -71)
texture = ExtResource("6_vkppv")

[node name="Label" type="Label" parent="Node2D"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -117.0
offset_top = -102.0
offset_right = 124.0
offset_bottom = -72.0
grow_horizontal = 2
grow_vertical = 2
text = "Cool game"
label_settings = SubResource("LabelSettings_jjaxa")
horizontal_alignment = 1

[node name="Label2" type="Label" parent="Node2D"]
offset_left = -70.0
offset_top = -37.0
offset_right = 253.0
offset_bottom = 6.0
text = "by jacedaichi"
label_settings = SubResource("LabelSettings_y8hwx")

[connection signal="pressed" from="Menu/VBoxContainer/Start" to="Menu" method="_on_start_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/Options" to="Menu" method="_on_options_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/Exit" to="Menu" method="_on_exit_pressed"]
